# web5-rs

bindings/web5_wasm/: Cargo.toml
crates/http-std/: Cargo.toml
crates/web5/: Cargo.toml
crates/web5_cli/: Cargo.toml
