[package]
name = "http-std"
version = "0.12.5-alpha.1"
edition = "2021"
homepage = "https://github.com/TBD54566975/web5-rs"
repository = "https://github.com/TBD54566975/web5-rs.git"
license-file = "../../LICENSE"

[dependencies]
async-trait = "0.1.83"
serde = { version = "1.0.193", features = ["derive"] }
lazy_static = "1.5.0"
thiserror = "1.0.50"
url = "2.5.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }
rustls = { version = "0.23.13", default-features = false, features = [
  "std",
  "tls12",
] }
rustls-native-certs = "0.8.0"
